--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="row">
           <img src="1.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>PROJECT-1</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur rerum, itaque et, vel nulla dicta, eum at ipsa nam voluptates perspiciatis quibusdam quidem ad. Sint consectetur placeat minima ipsam facilis, pariatur itaque assumenda vitae molestias voluptate cum consequatur, autem ullam.
             </p>
@@ -149,7 +149,7 @@
         <div class="row">
           <img src="1.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>PROJECT-2</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur rerum, itaque et, vel nulla dicta, eum at ipsa nam voluptates perspiciatis quibusdam quidem ad. Sint consectetur placeat minima ipsam facilis, pariatur itaque assumenda vitae molestias voluptate cum consequatur, autem ullam.
             </p>
@@ -161,7 +161,7 @@
 
           <img src="1.jpg" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>PROJECT-3</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur rerum, itaque et, vel nulla dicta, eum at ipsa nam voluptates perspiciatis quibusdam quidem ad. Sint consectetur placeat minima ipsam facilis, pariatur itaque assumenda vitae molestias voluptate cum consequatur, autem ullam.
             </p>
@@ -172,7 +172,7 @@
         <div class="row">
           <img src="3.jpg" class="mobile-screen" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>PROJECT-4</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur rerum, itaque et, vel nulla dicta, eum at ipsa nam voluptates perspiciatis quibusdam quidem ad. Sint consectetur placeat minima ipsam facilis, pariatur itaque assumenda vitae molestias voluptate cum consequatur, autem ullam.
             </p>
