--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!------Header Section------>
     <header>
-      <a href="#" class="logo"><span>V</span>ijay..</a>
+      <a class="logo"><span>V</span>ijay..</a>
       <ul class="navlist">
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#about">About Me</a></li>
