--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="main-text">
         <h2><span>Latest </span>Projects</h2>
       </div>
-      <div class="portfolio-content">
+      <div class="project-content">
         <div class="row">
           <img src="1.jpg" />
           <div class="layer">
