--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 
     <!---------about Section --------------->
     <section class="about" id="about">
-      <div class="about-img"></div>
+      <div class="about-img">
+        <video width="430px" height="500px" controls>
+          <source src="Portfolio video.mp4" type="video/mp4">
+        </video>
+      </div>
 
       <div class="about-text">
         <h2>About <span>Me</span></h2>
